Finished breakfast front page

--- a/recipes/recipes.html
+++ b/recipes/recipes.html
@@ -79,58 +79,58 @@
                             </div>
                         </a>
                     </article>
-                    <article class="breakfast4">
+                    <article class="breakfast5">
                         <span class="image">
-                                            <img src="images/Asparagus-Frittata.jpg" alt="" />
+                                            <img src="images/spinach-quiche.jpg" alt="" />
                                         </span>
                         <a href="recipes/asparagus-frittata.html">
-                            <h2>Asparagus Frittata with Spicy Sausage and Leeks</h2>
+                            <h2>Spinach Quiche with Bacon, Mushrooms &amp; Onions</h2>
                             <div class="content">
-                                <p>Because almost every veggie tastes better baked with eggs and sausage. </p>
+                                <p>Bacon cooked together with onions, mushrooms and garlic.  I know, it’s good stuff!  Does anyone NOT like this combo?</p>
                             </div>
                         </a>
                     </article>
-                    <article class="breakfast4">
+                    <article class="breakfast6">
                         <span class="image">
-                                                <img src="images/Asparagus-Frittata.jpg" alt="" />
+                                                <img src="images/sweet-potato-bacon-egg-muffins.jpg" alt="" />
                                             </span>
                         <a href="recipes/asparagus-frittata.html">
-                            <h2>Asparagus Frittata with Spicy Sausage and Leeks</h2>
+                            <h2>Sweet Potato Bacon &amp; Egg Muffins</h2>
                             <div class="content">
-                                <p>Because almost every veggie tastes better baked with eggs and sausage. </p>
+                                <p>The perfect make ahead breakfast bites! They're Paleo, dairy free, and contain just 6 ingredients.</p>
                             </div>
                         </a>
                     </article>
-                    <article class="breakfast4">
+                    <article class="breakfast7">
                         <span class="image">
-                                                    <img src="images/Asparagus-Frittata.jpg" alt="" />
+                                                    <img src="images/hash-apples-bacon.jpg" alt="" />
                                                 </span>
                         <a href="recipes/asparagus-frittata.html">
-                            <h2>Asparagus Frittata with Spicy Sausage and Leeks</h2>
+                            <h2>Paleo Sweet Potato Hash With Apples And Bacon</h2>
                             <div class="content">
-                                <p>Because almost every veggie tastes better baked with eggs and sausage. </p>
+                                <p>September means apple picking and sweet potatoes and bacon?</p>
                             </div>
                         </a>
                     </article>
-                    <article class="breakfast4">
+                    <article class="breakfast8">
                         <span class="image">
-                                                        <img src="images/Asparagus-Frittata.jpg" alt="" />
+                                                        <img src="images/strawberry-banana-bread.jpg" alt="" />
                                                     </span>
                         <a href="recipes/asparagus-frittata.html">
-                            <h2>Asparagus Frittata with Spicy Sausage and Leeks</h2>
+                            <h2>Strawberry Banana Bread Breakfast Bars</h2>
                             <div class="content">
-                                <p>Because almost every veggie tastes better baked with eggs and sausage. </p>
+                                <p>These grain free and Paleo Strawberry Banana Bread Breakfast Bars are soft, moist, with just the right amount of natural sweetness!</p>
                             </div>
                         </a>
                     </article>
-                    <article class="breakfast4">
+                    <article class="breakfast9">
                         <span class="image">
-                                                            <img src="images/Asparagus-Frittata.jpg" alt="" />
+                                                            <img src="images/fruit.jpg" alt="" />
                                                         </span>
                         <a href="recipes/asparagus-frittata.html">
-                            <h2>Asparagus Frittata with Spicy Sausage and Leeks</h2>
+                            <h2>MAPLE CITRUS FRUIT SALAD</h2>
                             <div class="content">
-                                <p>Because almost every veggie tastes better baked with eggs and sausage. </p>
+                                <p>The dressing is light, tart/sweet and allows the natural flavors of the fruit to hold the spotlight.</p>
                             </div>
                         </a>
                     </article>
@@ -164,7 +164,7 @@
                     </article>
                     <article class="style3">
                         <span class="image">
-											<img src="images/pic03.jpg" alt="" />
+											<img src="images/Asparagus-Frittata.jpg" alt="" />
 										</span>
                         <a href="generic.html">
                             <h2>Feugiat</h2>
@@ -173,39 +173,105 @@
                             </div>
                         </a>
                     </article>
-                    <article class="style1">
-                        <span class="image">
-												<img src="images/chicken-salad-lettuce-wraps.jpg" alt="" />
-											</span>
-                        <a href="chicken-salad-lettuce-wraps.html">
-                            <h2>Chicken Salad Lettuce Wraps</h2>
-                            <div class="content">
-                                <p>Chicken salad all grown up looks gooood (and makes for amazing leftovers).</p>
-                            </div>
-                        </a>
-                    </article>
-                    <article class="style2">
-                        <span class="image">
-												<img src="images/potato-kale-bacon-hash.jpg" alt="" />
-											</span>
-                        <a href="potato-kale-bacon-hash.html">
-                            <h2>Potato Bacon Kale Hash</h2>
-                            <div class="content" id="firsty">
-                                <p>A single serve Sweet Potato Bacon Kale Hash that’s healthy, satisfying, and made in one skillet!</p>
-                            </div>
-                        </a>
-                    </article>
-                    <article class="style3">
-                        <span class="image">
-												<img src="images/pic03.jpg" alt="" />
-											</span>
-                        <a href="generic.html">
-                            <h2>Feugiat</h2>
-                            <div class="content" id="lunch">
-                                <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-                            </div>
-                        </a>
-                    </article>
+                    <article class="lunch1">
+                            <span class="image">
+                                                <img src="images/chicken-salad-lettuce-wraps.jpg" alt="" />
+                                            </span>
+                            <a href="chicken-salad-lettuce-wraps.html">
+                                <h2>Chicken Salad Lettuce Wraps</h2>
+                                <div class="content">
+                                    <p>Chicken salad all grown up looks gooood (and makes for amazing leftovers).</p>
+                                </div>
+                            </a>
+                        </article>
+                        <article class="style2">
+                            <span class="image">
+                                                <img src="images/potato-kale-bacon-hash.jpg" alt="" />
+                                            </span>
+                            <a href="potato-kale-bacon-hash.html">
+                                <h2>Potato Bacon Kale Hash</h2>
+                                <div class="content" id="firsty">
+                                    <p>A single serve Sweet Potato Bacon Kale Hash that’s healthy, satisfying, and made in one skillet!</p>
+                                </div>
+                            </a>
+                        </article>
+                        <article class="style3">
+                            <span class="image">
+                                                <img src="images/Asparagus-Frittata.jpg" alt="" />
+                                            </span>
+                            <a href="generic.html">
+                                <h2>Feugiat</h2>
+                                <div class="content" id="lunch">
+                                    <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                                </div>
+                            </a>
+                        </article>
+                        <article class="lunch1">
+                                <span class="image">
+                                                    <img src="images/chicken-salad-lettuce-wraps.jpg" alt="" />
+                                                </span>
+                                <a href="chicken-salad-lettuce-wraps.html">
+                                    <h2>Chicken Salad Lettuce Wraps</h2>
+                                    <div class="content">
+                                        <p>Chicken salad all grown up looks gooood (and makes for amazing leftovers).</p>
+                                    </div>
+                                </a>
+                            </article>
+                            <article class="style2">
+                                <span class="image">
+                                                    <img src="images/potato-kale-bacon-hash.jpg" alt="" />
+                                                </span>
+                                <a href="potato-kale-bacon-hash.html">
+                                    <h2>Potato Bacon Kale Hash</h2>
+                                    <div class="content" id="firsty">
+                                        <p>A single serve Sweet Potato Bacon Kale Hash that’s healthy, satisfying, and made in one skillet!</p>
+                                    </div>
+                                </a>
+                            </article>
+                            <article class="style3">
+                                <span class="image">
+                                                    <img src="images/Asparagus-Frittata.jpg" alt="" />
+                                                </span>
+                                <a href="generic.html">
+                                    <h2>Feugiat</h2>
+                                    <div class="content" id="lunch">
+                                        <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                                    </div>
+                                </a>
+                            </article>
+                            <article class="lunch1">
+                                    <span class="image">
+                                                        <img src="images/chicken-salad-lettuce-wraps.jpg" alt="" />
+                                                    </span>
+                                    <a href="chicken-salad-lettuce-wraps.html">
+                                        <h2>Chicken Salad Lettuce Wraps</h2>
+                                        <div class="content">
+                                            <p>Chicken salad all grown up looks gooood (and makes for amazing leftovers).</p>
+                                        </div>
+                                    </a>
+                                </article>
+                                <article class="style2">
+                                    <span class="image">
+                                                        <img src="images/potato-kale-bacon-hash.jpg" alt="" />
+                                                    </span>
+                                    <a href="potato-kale-bacon-hash.html">
+                                        <h2>Potato Bacon Kale Hash</h2>
+                                        <div class="content" id="firsty">
+                                            <p>A single serve Sweet Potato Bacon Kale Hash that’s healthy, satisfying, and made in one skillet!</p>
+                                        </div>
+                                    </a>
+                                </article>
+                                <article class="style3">
+                                    <span class="image">
+                                                        <img src="images/Asparagus-Frittata.jpg" alt="" />
+                                                    </span>
+                                    <a href="generic.html">
+                                        <h2>Feugiat</h2>
+                                        <div class="content" id="lunch">
+                                            <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                                        </div>
+                                    </a>
+                                </article>                                                                      
                 </section>
                 <br/>
                 <br/>
