Finished breakfast and lunch galleries
removed demo pictures, changed sub-folder organization

--- a/recipes/recipes.html
+++ b/recipes/recipes.html
@@ -22,8 +22,9 @@
                         <li><a href="#breakfast" class="button next scrolly">Breakfast</a></li>
                         <li><a href="#lunch" class="button next scrolly">Lunch</a></li>
                         <li><a href="#dinner" class="button next scrolly">Dinner</a></li>
-                        <li><a href="#sides" class="button next scrolly">Sides</a></li>
-                        <li><a href="#desserts" class="button next scrolly">Desserts</a></li>
+                        <li><a href="#sides" class="button next scrolly">Other</a></li>
+                        <li><a href="#smoothies" class="button next scrolly">Smoothies</a></li>
+                        <li><a href="#desserts" class="button next scrolly">Weekly Planner</a></li>
                     </ul>
                 </header>
             </div>
@@ -50,7 +51,7 @@
                         <span class="image">
 										<img src="images/potato-kale-bacon-hash.jpg" alt="" />
 									</span>
-                        <a href="potato-kale-bacon-hash.html">
+                        <a href="recipes/potato-kale-bacon-hash.html">
                             <h2>Potato Bacon Kale Hash</h2>
                             <div class="content">
                                 <p>A single serve Sweet Potato Bacon Kale Hash that’s healthy, satisfying, and made in one skillet!</p>
@@ -70,23 +71,23 @@
                     </article>
                     <article class="breakfast4">
                         <span class="image">
-										<img src="images/Asparagus-Frittata.jpg" alt="" />
+										<img src="images/double-berry-breakfast-parfaits.jpg" alt="" />
 									</span>
-                        <a href="recipes/asparagus-frittata.html">
-                            <h2>Asparagus Frittata with Spicy Sausage and Leeks</h2>
+                        <a href="recipes/double-berry-breakfast-parfaits.html">
+                            <h2>Double Berry Breakfast Parfaits</h2>
                             <div class="content">
-                                <p>Because almost every veggie tastes better baked with eggs and sausage. </p>
+                                <p>Full of protein, fiber, and naturally sweet, they are perfect for the morning!</p>
                             </div>
                         </a>
                     </article>
                     <article class="breakfast5">
                         <span class="image">
-                                            <img src="images/spinach-quiche.jpg" alt="" />
+                                            <img src="images/strawberry-pancakes.jpg" alt="" />
                                         </span>
-                        <a href="recipes/asparagus-frittata.html">
-                            <h2>Spinach Quiche with Bacon, Mushrooms &amp; Onions</h2>
+                        <a href="recipes/strawberry-pancakes.html">
+                            <h2>Strawberry Protein Pancakes with Yogurt Filling</h2>
                             <div class="content">
-                                <p>Bacon cooked together with onions, mushrooms and garlic.  I know, it’s good stuff!  Does anyone NOT like this combo?</p>
+                                <p>These pancakes are packed with protein &amp; healthy whole grains (no flour!). They are sweet enough to be dessert, and healthy enough to have for breakfast!</p>
                             </div>
                         </a>
                     </article>
@@ -144,134 +145,134 @@
                         <span class="image">
 											<img src="images/chicken-salad-lettuce-wraps.jpg" alt="" />
 										</span>
-                        <a href="chicken-salad-lettuce-wraps.html">
+                        <a href="recipes/chicken-salad-lettuce-wraps.html">
                             <h2>Chicken Salad Lettuce Wraps</h2>
                             <div class="content">
                                 <p>Chicken salad all grown up looks gooood (and makes for amazing leftovers).</p>
                             </div>
                         </a>
                     </article>
-                    <article class="style2">
+                    <article class="lunch2">
                         <span class="image">
 											<img src="images/potato-kale-bacon-hash.jpg" alt="" />
 										</span>
-                        <a href="potato-kale-bacon-hash.html">
+                        <a href="recipes/potato-kale-bacon-hash.html">
                             <h2>Potato Bacon Kale Hash</h2>
                             <div class="content" id="firsty">
                                 <p>A single serve Sweet Potato Bacon Kale Hash that’s healthy, satisfying, and made in one skillet!</p>
                             </div>
                         </a>
                     </article>
-                    <article class="style3">
+                    <article class="lunch3">
                         <span class="image">
-											<img src="images/Asparagus-Frittata.jpg" alt="" />
+											<img src="images/fresh-mozzarella-tomato-and-basil-sandwiches.jpg" alt="" />
 										</span>
                         <a href="generic.html">
-                            <h2>Feugiat</h2>
+                            <h2>MOZZARELLA, TOMATO, &amp; BASIL SANDWICHES </h2>
+                            <div class="content" id="lunch">
+                                <p>These fresh mozzarella, tomato, and basil sandwiches with balsamic glaze are the perfect light and healthy vegetarian lunch.</p>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="lunch4">
+                        <span class="image">
+                                                <img src="images/beef-broccoli-stir-fry.jpg" alt="" />
+                                            </span>
+                        <a href="chicken-salad-lettuce-wraps.html">
+                            <h2>BEEF &amp; BROCCOLI STIR FRY</h2>
+                            <div class="content">
+                                <p>Thinly sliced flank steak in a sesame garlic sauce with crisp tender broccoli that's ready in 30 minutes.</p>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="lunch5">
+                        <span class="image">
+                                                <img src="images/paleo-chicken-cutlets.jpg" alt="" />
+                                            </span>
+                        <a href="potato-kale-bacon-hash.html">
+                            <h2>"BREADED" PALEO CHICKEN CUTLETS</h2>
+                            <div class="content" id="firsty">
+                                <p>Crispy "breaded" Paleo Chicken Cutlets that are super easy and just as good as mom used to make.</p>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="lunch6">
+                        <span class="image">
+                                                <img src="images/sheet-pan-chicken-veggies.jpg" alt="" />
+                                            </span>
+                        <a href="generic.html">
+                            <h2>SHEET PAN CHICKEN WITH VEGGIES</h2>
+                            <div class="content" id="lunch">
+                                <p>This 30 minute sheet pan chicken with veggies has a sweet/savory sauce that's healthy, paleo, and easy to whip up in a blender!</p>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="lunch7">
+                        <span class="image">
+                                                    <img src="images/bacon-ranch-potato-salad.jpg" alt="" />
+                                                </span>
+                        <a href="chicken-salad-lettuce-wraps.html">
+                            <h2>BACON RANCH POTATO SALAD</h2>
+                            <div class="content">
+                                <p>Chicken salad all grown up looks gooood (and makes for amazing leftovers).</p>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="lunch8">
+                        <span class="image">
+                                                    <img src="images/bacon-wrapped-pork-tenderloin.jpg" alt="" />
+                                                </span>
+                        <a href="potato-kale-bacon-hash.html">
+                            <h2>BACON WRAPPED PORK TENDERLOIN</h2>
+                            <div class="content" id="firsty">
+                                <p>A single serve Sweet Potato Bacon Kale Hash that’s healthy, satisfying, and made in one skillet!</p>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="lunch9">
+                        <span class="image">
+                                                    <img src="images/paleo-chicken-salad-with-bacon-and-scallions.jpg" alt="" />
+                                                </span>
+                        <a href="generic.html">
+                            <h2>PALEO CHICKEN SALAD WITH BACON &amp; SCALLIONS </h2>
                             <div class="content" id="lunch">
                                 <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
                             </div>
                         </a>
                     </article>
-                    <article class="lunch1">
-                            <span class="image">
-                                                <img src="images/chicken-salad-lettuce-wraps.jpg" alt="" />
-                                            </span>
-                            <a href="chicken-salad-lettuce-wraps.html">
-                                <h2>Chicken Salad Lettuce Wraps</h2>
-                                <div class="content">
-                                    <p>Chicken salad all grown up looks gooood (and makes for amazing leftovers).</p>
-                                </div>
-                            </a>
-                        </article>
-                        <article class="style2">
-                            <span class="image">
-                                                <img src="images/potato-kale-bacon-hash.jpg" alt="" />
-                                            </span>
-                            <a href="potato-kale-bacon-hash.html">
-                                <h2>Potato Bacon Kale Hash</h2>
-                                <div class="content" id="firsty">
-                                    <p>A single serve Sweet Potato Bacon Kale Hash that’s healthy, satisfying, and made in one skillet!</p>
-                                </div>
-                            </a>
-                        </article>
-                        <article class="style3">
-                            <span class="image">
-                                                <img src="images/Asparagus-Frittata.jpg" alt="" />
-                                            </span>
-                            <a href="generic.html">
-                                <h2>Feugiat</h2>
-                                <div class="content" id="lunch">
-                                    <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-                                </div>
-                            </a>
-                        </article>
-                        <article class="lunch1">
-                                <span class="image">
-                                                    <img src="images/chicken-salad-lettuce-wraps.jpg" alt="" />
-                                                </span>
-                                <a href="chicken-salad-lettuce-wraps.html">
-                                    <h2>Chicken Salad Lettuce Wraps</h2>
-                                    <div class="content">
-                                        <p>Chicken salad all grown up looks gooood (and makes for amazing leftovers).</p>
-                                    </div>
-                                </a>
-                            </article>
-                            <article class="style2">
-                                <span class="image">
-                                                    <img src="images/potato-kale-bacon-hash.jpg" alt="" />
-                                                </span>
-                                <a href="potato-kale-bacon-hash.html">
-                                    <h2>Potato Bacon Kale Hash</h2>
-                                    <div class="content" id="firsty">
-                                        <p>A single serve Sweet Potato Bacon Kale Hash that’s healthy, satisfying, and made in one skillet!</p>
-                                    </div>
-                                </a>
-                            </article>
-                            <article class="style3">
-                                <span class="image">
-                                                    <img src="images/Asparagus-Frittata.jpg" alt="" />
-                                                </span>
-                                <a href="generic.html">
-                                    <h2>Feugiat</h2>
-                                    <div class="content" id="lunch">
-                                        <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-                                    </div>
-                                </a>
-                            </article>
-                            <article class="lunch1">
-                                    <span class="image">
-                                                        <img src="images/chicken-salad-lettuce-wraps.jpg" alt="" />
+                    <article class="lunch10">
+                        <span class="image">
+                                                        <img src="images/orange-chicken.jpg" alt="" />
                                                     </span>
-                                    <a href="chicken-salad-lettuce-wraps.html">
-                                        <h2>Chicken Salad Lettuce Wraps</h2>
-                                        <div class="content">
-                                            <p>Chicken salad all grown up looks gooood (and makes for amazing leftovers).</p>
-                                        </div>
-                                    </a>
-                                </article>
-                                <article class="style2">
-                                    <span class="image">
-                                                        <img src="images/potato-kale-bacon-hash.jpg" alt="" />
+                        <a href="chicken-salad-lettuce-wraps.html">
+                            <h2>Orange Chicken with Rice &amp; Broccoli</h2>
+                            <div class="content">
+                                <p>Chicken salad all grown up looks gooood (and makes for amazing leftovers).</p>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="lunch11">
+                        <span class="image">
+                                                        <img src="images/strawberry-spinach-wrap.jpg" alt="" />
                                                     </span>
-                                    <a href="potato-kale-bacon-hash.html">
-                                        <h2>Potato Bacon Kale Hash</h2>
-                                        <div class="content" id="firsty">
-                                            <p>A single serve Sweet Potato Bacon Kale Hash that’s healthy, satisfying, and made in one skillet!</p>
-                                        </div>
-                                    </a>
-                                </article>
-                                <article class="style3">
-                                    <span class="image">
-                                                        <img src="images/Asparagus-Frittata.jpg" alt="" />
+                        <a href="potato-kale-bacon-hash.html">
+                            <h2>Strawberry Chicken &amp; Spinach Wraps</h2>
+                            <div class="content" id="firsty">
+                                <p>A single serve Sweet Potato Bacon Kale Hash that’s healthy, satisfying, and made in one skillet!</p>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="lunch12">
+                        <span class="image">
+                                                        <img src="images/apple-and-prosciutto-sandwich.jpg" alt="" />
                                                     </span>
-                                    <a href="generic.html">
-                                        <h2>Feugiat</h2>
-                                        <div class="content" id="lunch">
-                                            <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-                                        </div>
-                                    </a>
-                                </article>                                                                      
+                        <a href="generic.html">
+                            <h2>APPLE &amp; PROSCIUTTO SANDWICH WITH GOAT CHEESE AND SPINACH</h2>
+                            <div class="content" id="lunch">
+                                <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                            </div>
+                        </a>
+                    </article>
                 </section>
                 <br/>
                 <br/>
@@ -361,7 +362,7 @@
 											<img src="images/chicken-salad-lettuce-wraps.jpg" alt="" />
 										</span>
                         <a href="chicken-salad-lettuce-wraps.html">
-                            <h2>Chicken Salad Lettuce Wraps</h2>
+                            <h2>ALMOND BUTTER BERRY BREAKFAST BARS</h2>
                             <div class="content">
                                 <p>Chicken salad all grown up looks gooood (and makes for amazing leftovers).</p>
                             </div>
