--- a/recipes/recipes/basic-granola.html
+++ b/recipes/recipes/basic-granola.html
@@ -60,6 +60,20 @@
 									</tr>
 									</tbody>
 									</table>
+									<table>
+											<thead>
+											<tr>
+											<th id="scolor">OPTIONAL FLAVOUR</th>
+											<th id="scolor"></th>
+											</tr>
+											</thead>
+											<tbody>
+													<tr>
+													<td>Cocoa powder</td>
+													<td></td>
+													</tr>
+											</tbody>
+											</table>
 									</div>
 							</span>
 						</div>	
