--- a/recipes/recipes/chicken-salad-lettuce-wraps.html
+++ b/recipes/recipes/chicken-salad-lettuce-wraps.html
@@ -4,16 +4,16 @@
 		<title>Chicken Salad Lettuce Wraps</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/recipes.css" />
+		<link rel="stylesheet" href="../assets/css/recipes.css" />
 	</head>
 	<body>
 		<div id="wrapper">
 					<div id="main">
 						<div class="inner">
-							<h1 id="hcolor"><a href="recipes.html" class="fa fa-arrow-left" aria-hidden="true"></a> Chicken Salad Lettuce Wraps</h1>
+							<h1 id="hcolor"><a href="../recipes.html" class="fa fa-arrow-left" aria-hidden="true"></a> Chicken Salad Lettuce Wraps</h1>
 							<div class="row">
 								<span class="6u">
-									<img src="images/chicken-salad-lettuce-wraps2.jpg"/>
+									<img src="../images/chicken-salad-lettuce-wraps2.jpg"/>
 									<br/>
 								</span>
 							<span class="6u">
