--- a/recipes/recipes/potato-kale-bacon-hash.html
+++ b/recipes/recipes/potato-kale-bacon-hash.html
@@ -4,22 +4,22 @@
 		<title>Potato Bacon Kale Hash</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/recipes.css" />
+		<link rel="stylesheet" href="../assets/css/recipes.css" />
 	</head>
 	<body>
 		<div id="wrapper">
 					<div id="main">
 						<div class="inner">
-							<h1 id="hcolor"><a href="recipes.html" class="fa fa-arrow-left" aria-hidden="true"></a> Potato Bacon Kale Hash</h1>
+							<h1 id="hcolor"><a href="../recipes.html" class="fa fa-arrow-left" aria-hidden="true"></a> Potato Bacon Kale Hash</h1>
 							<div class="row">
 								<span class="6u">
-									<img src="images/potato-kale-bacon-hash2.jpg"/>
+									<img src="../images/potato-kale-bacon-hash2.jpg"/>
 									<br/>
 								</span>
 							<span class="6u">
 									<h3 id="scolor">Information</h3>
 									<ul class="alt">
-											<li class="">TOTAL TIME: <span id="infoblck">0:15</span> PREP TIME: <span id="infoblck">0:05</span> COOK TIME: <span id="infoblck">0:10</span> SERVINGS: <span id="infoblck">1</span></li>
+											<li class="">TOTAL TIME: <span id="infoblck">0:20</span> PREP TIME: <span id="infoblck">0:05</span> COOK TIME: <span id="infoblck">0:15</span> SERVINGS: <span id="infoblck">1.5</span></li>
 										</ul>
 									<div class="table-wrapper">
 									<table>
@@ -39,11 +39,7 @@
 									<td>3 slices (nicely chopped)</td>
 									</tr>
 									<tr>
-									<td>Sea salt</td>
-									<td>generous pinch</td>
-									</tr>
-									<tr>
-									<td>Paprika</td>
+									<td>Paprika & Sea slat</td>
 									<td>generous pinch</td>
 									</tr>
 									<tr>
@@ -60,10 +56,26 @@
 									</tr>
 									</tbody>
 									</table>
+									<table>
+									<thead>
+									<tr>
+									<th id="scolor">OPTIONAL VEGETABLES</th>
+									</tr>
+									</thead>
+									<tbody>
+											<tr>
+											<td>Tri-color potatos</td>
+											<td>Baby spinach</td>
+											</tr>
+											<tr>
+											<td>Baby Tomatoes</td>
+											<td>Peppers</td>
+											</tr>
+									</tbody>
+									</table>
 									</div>
 							</span>
 						</div>	
-						<br />
 						<h3 id="scolor">Directions</h3>
 						<ol>
 								<li>Heat well seasoned cast iron skillet (or other non-stick heavy skillet) over medium heat, and add the bacon pieces.</li>
@@ -73,8 +85,13 @@
 								<li>Uncover the skillet and add the chopped kale, stir to coat the kale with bacon fat, add a pinch of salt then recover to allow the kale to cook.</li>
 								<li>While the hash is cooking, you can fry or scramble your egg in a separate pan to serve alongside the hash. You can use rendered bacon fat for this or another cooking fat of choice.</li>
 								<li>Once the bacon, potatoes and kale are cooked to preference, stir once again and then transfer to a plate to serve! Top with your cooked egg and garnish with green onion and additional salt and pepper if desired for a final touch. <br/><br/>Enjoy!</li>
-						</ol>					
-						</div>
+						</ol>
+						<h3 id="scolor">Notes</h3>
+						<ul>
+							<li>Fry the bacon and potatos longer than you think you should.</li>
+							<li>Add more kale/spinach than you think you should.</li>
+						</ul>
+					</div>
 					</div>
 			</div>
 		<!-- Scripts -->
