--- a/recipes/recipes/strawberry-pancakes.html
+++ b/recipes/recipes/strawberry-pancakes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Basic Granola</title>
+		<title>Strawberry Pancakes</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="../assets/css/recipes.css" />
@@ -10,10 +10,10 @@
 		<div id="wrapper">
 					<div id="main">
 						<div class="inner">
-							<h1 id="hcolor"><a href="../recipes.html#breakfast" class="fa fa-arrow-left" aria-hidden="true"></a> Basic Granola</h1>
+							<h1 id="hcolor"><a href="../recipes.html#breakfast" class="fa fa-arrow-left" aria-hidden="true"></a> Strawberry Pancakes with Yogurt Filling</h1>
 							<div class="row">
 								<span class="6u">
-									<img src="../images/basic-granola2.jpg" width="640px" height="640px"/>
+									<img src="../images/strawberry-pancakes2.jpg" width="640px" height="640px"/>
 									<br/>
 								</span>
 							<span class="6u">
@@ -63,6 +63,7 @@
 									</div>
 							</span>
 						</div>	
+						<br />
 						<h3 id="scolor">Directions</h3>
 						<ol>
 								<li>Preheat oven to 350ºF. Grease or line a baking sheet with parchment paper.</li>
